--- a/papers/templates/components/navbar.html
+++ b/papers/templates/components/navbar.html
@@ -186,7 +186,9 @@
           <!-- Dropdown menu -->
           <div x-show="open" x-cloak @click.away="open = false" class="absolute right-0 mt-2 w-40 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-800 rounded-lg shadow-lg z-50">
             <a href="{% url 'profile_page' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Profile</a>
+            {% if request.user.is_staff %}
             <a href="{% url 'staff_dashboard' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Staff Dashboard</a>
+            {% endif %}
             <a href="{% url 'account_logout' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Logout</a>
           </div>
         </li>
