--- a/papers/templates/components/navbar.html
+++ b/papers/templates/components/navbar.html
@@ -188,14 +188,15 @@
             <a href="{% url 'profile_page' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Profile</a>
             {% if request.user.is_staff %}
             <a href="{% url 'staff_dashboard' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Staff Dashboard</a>
-            {% endif %}
+             <a href="{% url 'admin:index' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Admin</a>
+            {% endif %} 
             <a href="{% url 'account_logout' %}" class="block px-4 py-2 text-sm text-gray-800 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800">Logout</a>
           </div>
         </li>
       </ul>
     {% else %}
-        <a href="{% url 'account_login' %}" class=" p-2 text-gray-800 dark:text-gray-400 text-xs inline-flex items-center gap-2" title="Login">
-        <span class="bg-white/50 dark:bg-gray-800/50 rounded-full px-4 py-2">Sign in</span>
+        <a href="{% url 'account_login' %}" class="py-2 text-gray-800 dark:text-gray-400 text-xs justify-center items-center gap-2" title="Login">
+        <span class="bg-white/50 dark:bg-gray-800/50 border border-gray-300 dark:border-gray-800/50 rounded-full px-4 py-2">Sign in</span>
       </a>
     {% endif %}
   </div>
